jwt interceptor added

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
                             </button>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#" *ngFor="let project of Projects"
-                                    onclick="return false" (click)="onPushProjectButton($event)">{{project}}</a>
+                                    onclick="return false" (click)="onPushProjectButton($event)">{{project.projectName}}</a>
                             </div>
                         </div>
                     </div>
