--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,14 +9,14 @@
             <div class="form-group form-row">
               <label for="UserName" class="col-md-4 col-form-label">Username</label>
               <div class="col-md-8">
-                <input type="text" class="form-control" placeholder="Username" [(ngModel)]="loginModel.UserName" name="UserName" autofocus="autofocus">
+                <input type="text" class="form-control" placeholder="Username" [(ngModel)]="loginModel.userName" name="UserName" autofocus="autofocus">
               </div>
             </div>
   
             <div class="form-group form-row">
               <label for="Password" class="col-md-4 col-form-label">Password</label>
               <div class="col-md-8">
-                <input type="password" class="form-control" placeholder="Password" [(ngModel)]="loginModel.Password" name="Password">
+                <input type="password" class="form-control" placeholder="Password" [(ngModel)]="loginModel.password" name="Password">
               </div>
             </div>
   
