--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="mynav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" *ngIf="loginService.currentUserName !== ''">
-        <span class="nav-link">{{loginService.currentUserName}}</span>
+        <span class="nav-link" style="text-decoration: underline;">{{loginService.currentUserName}}</span>
       </li>
       <li class="nav-item" *ngIf="loginService.currentUserName !== ''">
         <a class="nav-link" routerLink="dashboard">Dashboard</a>
