parent to child using viewChild

--- a/src/app/admin/project/project.component.html
+++ b/src/app/admin/project/project.component.html
@@ -5,7 +5,7 @@
       <h5>{{project.projectName}}</h5>
     </div>
   
-    <div class="card-body">
+    <div class="card-body" [hidden]="doHide">
       <table class="table table-borderless">
         <tr>
           <th>Date of Start</th>
