clerify emit event

--- a/src/app/admin/project/project.component.html
+++ b/src/app/admin/project/project.component.html
@@ -27,7 +27,7 @@
     </div>
   
     <div class="card-footer">
-      <button class="btn btn-info" (click)="onEditClick($event, i)" data-toggle="modal" data-target="#editModal">Edit</button>&nbsp;
-      <button class="btn btn-warning" (click)="onDeleteClick($event, i)" data-toggle="modal" data-target="#deleteModal">Delete</button>
+      <button class="btn btn-info" (click)="onEdit($event, i)" data-toggle="modal" data-target="#editModal">Edit</button>&nbsp;
+      <button class="btn btn-warning" (click)="onDelete($event, i)" data-toggle="modal" data-target="#deleteModal">Delete</button>
     </div>
   </div>
